k8s/psp-mocks.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: psp-mocks-deployment
  namespace: settleflow
  labels:
    app: psp-mocks
spec:
  replicas: 1
  selector:
    matchLabels:
      app: psp-mocks
  template:
    metadata:
      labels:
        app: psp-mocks
    spec:
      containers:
        - name: psp-mocks
          image: ghcr.io/moni-sm/settleflow-psp-mocks:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: alpha
              containerPort: 8081
            - name: beta
              containerPort: 8082
            - name: gamma
              containerPort: 8083
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "250m"
---
apiVersion: v1
kind: Service
metadata:
  name: psp-mocks-service
  namespace: settleflow
spec:
  selector:
    app: psp-mocks
  ports:
    - name: alpha
      protocol: TCP
      port: 8081
      targetPort: 8081
    - name: beta
      protocol: TCP
      port: 8082
      targetPort: 8082
    - name: gamma
      protocol: TCP
      port: 8083
      targetPort: 8083
